--- a/src/app/favourites/favourites.component.html
+++ b/src/app/favourites/favourites.component.html
@@ -7,7 +7,7 @@
       <div class="u-gallery-inner u-gallery-inner-1">
         <div class="u-effect-fade u-gallery-item">
           <div class="u-back-slide" data-image-width="1080" data-image-height="1080">
-            <img class="u-back-image u-expanded" src="src/assets/images/kassiordersLogo.jpeg">
+            <img class="u-back-image u-expanded" src="assets/images/kassiordersLogo.jpeg">
           </div>
           <div class="u-over-slide u-shading u-over-slide-1">
             <h3 class="u-gallery-heading"></h3>
@@ -16,7 +16,7 @@
         </div>
         <div class="u-effect-fade u-gallery-item">
           <div class="u-back-slide" data-image-width="1444" data-image-height="1000">
-            <img class="u-back-image u-expanded" src="src/assets/images/733075_medium2000.jpg">
+            <img class="u-back-image u-expanded" src="assets/images/733075_medium2000.jpg">
           </div>
           <div class="u-over-slide u-shading u-over-slide-2">
             <h3 class="u-gallery-heading"></h3>
@@ -25,7 +25,7 @@
         </div>
         <div class="u-effect-fade u-gallery-item">
           <div class="u-back-slide" data-image-width="500" data-image-height="358">
-            <img class="u-back-image u-expanded" src="src/assets/images/2050739_small500.png">
+            <img class="u-back-image u-expanded" src="assets/images/2050739_small500.png">
           </div>
           <div class="u-over-slide u-shading u-over-slide-3">
             <h3 class="u-gallery-heading"></h3>
@@ -34,7 +34,7 @@
         </div>
         <div class="u-effect-fade u-gallery-item">
           <div class="u-back-slide" data-image-width="500" data-image-height="333">
-            <img class="u-back-image u-expanded" src="src/assets/images/2099408_small500.jpg">
+            <img class="u-back-image u-expanded" src="assets/images/2099408_small500.jpg">
           </div>
           <div class="u-over-slide u-shading u-over-slide-4">
             <h3 class="u-gallery-heading"></h3>
@@ -43,7 +43,7 @@
         </div>
         <div class="u-effect-fade u-gallery-item">
           <div class="u-back-slide" data-image-width="150" data-image-height="122">
-            <img class="u-back-image u-expanded" src="src/assets/images/587721.jpg">
+            <img class="u-back-image u-expanded" src="assets/images/587721.jpg">
           </div>
           <div class="u-over-slide u-shading u-over-slide-5">
             <h3 class="u-gallery-heading"></h3>
@@ -52,7 +52,7 @@
         </div>
         <div class="u-effect-fade u-gallery-item">
           <div class="u-back-slide" data-image-width="500" data-image-height="358">
-            <img class="u-back-image u-expanded" src="src/assets/images/2050739_small500.png">
+            <img class="u-back-image u-expanded" src="assets/images/2050739_small500.png">
           </div>
           <div class="u-over-slide u-shading u-over-slide-6">
             <h3 class="u-gallery-heading"></h3>
