--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -33,7 +33,7 @@
 
 <header class="u-align-right u-black u-clearfix u-header u-header" id="sec-0563"><div class="u-clearfix u-sheet u-sheet-1">
   <a [routerLink]="['/home']" class="u-align-left u-image u-logo u-image-1" data-image-width="1080" data-image-height="1080">
-    <img src="../../assets/images/kassiordersLogo.jpeg" class="u-logo-image u-logo-image-1">
+    <img src="assets/images/kassiordersLogo.jpeg" class="u-logo-image u-logo-image-1">
   </a>
   <nav class="u-align-right u-menu u-menu-dropdown u-offcanvas u-menu-1">
     <div class="menu-collapse u-custom-font" style="font-size: 1rem; font-family: Amarante; text-transform: uppercase;">
